<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:orientation="horizontal"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <TextView
            android:id="@+id/tvDiscover"
            style="@style/tvToolBarBottom"
            android:drawableTop="@drawable/discover_icon"
            android:text="@string/discover"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvMap"
            style="@style/tvToolBarBottom"
            android:drawableTop="@drawable/map"
            android:text="@string/map"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvMyPost"
            style="@style/tvToolBarBottom"
            android:drawableTop="@drawable/my_post"
            android:text="@string/my_post"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/tvRequest"
            style="@style/tvToolBarBottom"
            android:drawableTop="@drawable/request"
            android:text="@string/requests"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvMyNetwork"
            style="@style/tvToolBarBottom"
            android:drawableTop="@drawable/my_network"
            android:text="@string/my_network"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
