<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical">

    <include layout="@layout/drawer_tool_bar" />

    <LinearLayout
        android:id="@+id/llDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorText"
        >

        <include layout="@layout/profile_info_drawer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/colorText"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHome"
                style="@style/tvDrawer"
                android:drawableEnd="@drawable/home_icon"
                android:drawableRight="@drawable/home_icon"
                android:text="@string/home" />

            <TextView
                android:id="@+id/tvCard"
                style="@style/tvDrawer"
                android:drawableEnd="@drawable/card_icon"
                android:drawableRight="@drawable/card_icon"
                android:text="@string/card_subscription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/colorText"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSupport"
                style="@style/tvDrawer"
                android:drawableEnd="@drawable/phone_icon"
                android:drawableRight="@drawable/phone_icon"
                android:text="@string/support" />

            <TextView
                android:id="@+id/tvMyRequest"
                style="@style/tvDrawer"
                android:drawableEnd="@drawable/profile_icon"
                android:drawableRight="@drawable/profile_icon"
                android:text="@string/my_request" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/colorText"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvShare"
                style="@style/tvDrawer"
                android:drawableEnd="@drawable/share"
                android:drawableRight="@drawable/phone_icon"
                android:text="@string/share" />

            <TextView
                android:id="@+id/tvLogout"
                style="@style/tvDrawer"
                android:drawableEnd="@drawable/logout"
                android:drawableRight="@drawable/logout"
                android:text="@string/logout"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
